globus-ftp-client (8.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 10:42:22 -0500

globus-ftp-client (7.6-1) unstable; urgency=low

  * GT-425: add environment variable to force IPV6 compatibility

 -- Globus Toolkit <support@globus.org>  Thu, 15 Aug 2013 06:13:59 -0500

globus-ftp-client (7.5-1) unstable; urgency=low

  * Fix performance issue, don't need to check binary data buffers for newlines

 -- Globus Toolkit <support@globus.org>  Thu, 09 May 2013 10:08:08 -0400

globus-ftp-client (7.4-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-ftp-client (7.4-1) unstable; urgency=low

  * GT-153: make gridftp-v2 GET/PUT the default for server that support it
  * GT-15: Add explicit CWD command to client API
  * GT-9: Failure in globus_ftp_client_operationattr_set_authorization() results in using freed memory
  * RIC-226: Some dependencies are missing in GPT metadata

 -- Globus Toolkit <support@globus.org>  Wed, 27 Jun 2012 19:02:14 +0000

globus-ftp-client (7.3-1) unstable; urgency=low

  * RIC-226: Some dependencies are missing in GPT metadata

 -- Globus Toolkit <support@globus.org>  Tue, 14 Feb 2012 14:43:44 -0500

globus-ftp-client (7.2-2) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-ftp-client (7.2-1) unstable; urgency=low

  * sync prior to 5.2.0 branch

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 14:49:50 -0500

globus-ftp-client (7.1-1) unstable; urgency=low

  * Remove obsolete get-orig-source rules

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 14:54:53 -0500

globus-ftp-client (7.1-0) unstable; urgency=low

  * Update to 5.1.3

 -- Globus Toolkit <support@globus.org>  Tue, 15 Nov 2011 16:26:12 -0500

globus-ftp-client (6.3-0GT5.1.1a) unstable; urgency=low
