@@ -2,6 +2,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
+sbindir=@sbindir@
 
 Name: globus-gridftp-server
 Description: Globus Toolkit - Globus GridFTP Server
