@@ -1,3 +1,9 @@
+globus-gridftp-server (7.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Fri, 14 Feb 2014 09:36:57 -0500
+
 globus-gridftp-server (7.1-1+gt6.@distro@) @distro@; urgency=low
 
   * Packagin fixes
