@@ -1,3 +1,9 @@
+globus-ftp-client (8.1-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Fri, 14 Feb 2014 09:31:53 -0500
+
 globus-ftp-client (8.0-1+gt6.@distro@) @distro@; urgency=low
 
   * Repackage for GT6 without GPT
